typo & design fixed

--- a/index.html
+++ b/index.html
@@ -68,9 +68,29 @@ permalink: /
 						<div class="thuhidden">
 							<h4> <span class="fa fa-link"></span> 域名选择 </h4>
 							<ul>
-								<li><a href="https://mirrors.tuna.tsinghua.edu.cn/">https://mirrors.tuna.tsinghua.edu.cn/</a> 自动选择 </li>
-								<li><a href="https://mirrors6.tuna.tsinghua.edu.cn/">https://mirrors6.tuna.tsinghua.edu.cn/</a> 只解析 IPv6</li>
-								<li><a href="https://mirrors4.tuna.tsinghua.edu.cn/">https://mirrors4.tuna.tsinghua.edu.cn/</a> 只解析 IPv4</li>
+								<li><a href="http://mirrors.uicstat.com">http://mirrors.uicstat.com</a> 自动选择 </li>
+								<!--<li><a href="https://mirrors6.tuna.tsinghua.edu.cn/">https://mirrors6.tuna.tsinghua.edu.cn/</a> 只解析 IPv6</li>
+								<li><a href="https://mirrors4.tuna.tsinghua.edu.cn/">https://mirrors4.tuna.tsinghua.edu.cn/</a> 只解析 IPv4</li>-->
+								<a href='http://ipv6-test.com/validate.php?url=referer'><img src='/src/img/button-ipv6-80x15.png' alt='ipv6 ready' title='ipv6 ready' border='0' /></a>
+								<a class="github-button" href="https://github.com/shuopensourcecommunity/mirrors.shuosc.org" data-show-count="true" aria-label="Star shuopensourcecommunity/mirrors.shuosc.org on GitHub">Star</a>
+								<!-- IPv6-test.com widget BEGIN -->
+								<script type="text/javascript">var _ipv6test_widget_style = {
+									border: "solid 1px #000",
+									font_size: "12px",
+									show_country_flags: true,
+									show_loading_anim: true,
+									ipv4_label_color: "#393",
+									ipv4_background_color: "#eee",
+									ipv6_label_color: "#339",
+									ipv6_background_color: "#ddd",
+									stats_position: "bottom",
+									stats_font_size: "10px",
+									stats_color: "#eee",
+									stats_color_v4: "#beb",
+									stats_color_v6: "#bbe",
+									stats_background_color: "#666"
+									}
+								</script>
 							</ul>
 						</div>
 						<div id="download-link">
@@ -83,9 +103,9 @@ permalink: /
 						<div class="thuhidden">
 							<h4> <span class="fa fa-envelope-o"></span> 联系我们 </h4>
 							<ul>
-								<li><strong>意见反馈</strong> <br /> <a href="https://github.com/tuna/issues">https://github.com/tuna/issues</a></li>
-								<li><strong>发送邮件</strong> <br /> <a id="eib1gieB"></a></li>
-								<li><strong>在线交流</strong> <br /> <a href="https://fishroom.tuna.moe/log/tuna/today"> #tuna at freenode </a></li>
+								<li><strong>意见反馈</strong> <br /> <a href="https://github.com/TerenceLiu98/server-andopenstack/issues">https://github.com/tuna/issues</a></li>
+								<li><strong>发送邮件</strong> <br /> <a href = mailto:t_lau@uicstat.com>t_lau[AT]uicstat.com</a></li>
+								<!--<li><strong>在线交流</strong> <br /> <a href="https://fishroom.tuna.moe/log/tuna/today"> #tuna at freenode </a></li>-->
 							</ul>
 						</div>
 						<div>
@@ -94,7 +114,10 @@ permalink: /
 								<li><a href="/help/">使用帮助</a></li>
 								<li><a href="/status/#server-status">服务器状态</a></li>
 								<li><a href="/status/#syncing-status">同步状态</a></li>
-								<li class="thuhidden"><a href="https://tuna.moe/">清华大学 TUNA 协会</a></li>
+								<li class="thuhidden"><a href="https://uichcc.com/">UIC-HCC</a></li>
+								<li class="thuhidden"><a href="https://mirrors.tuna.tsinghua.edu.cn">清华大学开源软件镜像</a></li>
+								<li class="thuhidden"><a href="http://mirrors.ustc.edu.cn/">中国科学技术大学开源软件镜像</a></li>
+								<li class="thuhidden"><a href="https://mirror.bjtu.edu.cn">中国科学技术大学开源软件镜像</a></li>
 								<li><a href="https://github.com/tuna/tunasync">镜像管理器源码</a></li>
 								<li><a href="https://github.com/tuna/tunasync-scripts">自定义镜像脚本</a></li>
 							</ul>
